Refactor/30 (#34)
* feat: integrate aeko==2.0.0

* fix: refactor endpoints path
